tests/baselines/reference/invalidSyntaxNamespaceImportWithAMD.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
1.ts(1,10): error TS1005: 'as' expected.
1.ts(1,15): error TS1005: 'from' expected.
1.ts(1,15): error TS1141: String literal expected.
1.ts(1,20): error TS1005: ';' expected.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== 0.ts (0 errors) ====
    export class C { }
    
==== 1.ts (4 errors) ====
    import * from Zero from "./0"
             ~~~~
!!! error TS1005: 'as' expected.
                  ~~~~
!!! error TS1005: 'from' expected.
                  ~~~~
!!! error TS1141: String literal expected.
                       ~~~~
!!! error TS1005: ';' expected.